--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                 <span>Copyright &copy;
                   <script>
                     document.write(new Date().getFullYear())
-                  </script>, Designed &amp; Developed by <a href="github.com/faysal-hossain11">Faysal</a>
+                  </script>, Designed &amp; Developed by <a href="facebook.com/zid512">ZAHID</a>
                 </span>
               </div>
             </div>
